# python-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: changelog.md  contributing.md  index.md  reference.md
src/python_template/: __init__.py  cli.py  core.py
tests/: conftest.py  test_cli.py  test_core.py
